qt4-x11 (4:4.8.5+git192-g085f851+dfsg-3) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Remove Ubuntu-specific code to add armel to armv6_architectures.
    Ubuntu no longer supports armel.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 Dec 2013 21:17:33 +0400

qt4-x11 (4:4.8.5+git192-g085f851+dfsg-2) unstable; urgency=low

  * Fix typo created when refreshing a patch for s390x which created a FTBFS.
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 06 Dec 2013 16:38:43 -0300

qt4-x11 (4:4.8.5+git192-g085f851+dfsg-1) unstable; urgency=medium

  * New upstream git snapshot. This includes the fix for CVE-2013-4549: XML
    Entity Expansion Denial of Service. Set severity to medium.
  * Update symbols fles with buildds' logs and current build.
  * Refresh patches.
  * Install new translation.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 05 Dec 2013 20:45:43 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-2) unstable; urgency=low

  * Remove Fix_JavaScriptCore_ftbfs_on_mips64_el.patch, it makes 32 bits
    platforms FTBFS.
  * Take back s390x_jscore.diff to it's original state.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 11 Oct 2013 20:53:25 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-1) unstable; urgency=low

  * Add Fix_JavaScriptCore_ftbfs_on_mips64_el.patch. It just needs to be
    approved upstream, but it has been already ACKed (Closes: #719763).
    - Fix s390x_jscore.diff so it can be applied on top of the above mentioned
    patch. This last one seems not pushed upstream.
  * Remove sources with minified javascript libs without source
    (Closes: #723036).
    - Increase DFSG revision number.
    I have tried building without those files and everything seems OK except a
    documentation html file that shows the minified javascript code which has
    been removed, so I'll leave it like that.
